# tse3

./: CMakeLists.txt  Makefile.in  config.h.in  configure  configure.in  tse3.spec
demos/: Makefile.in
doc/: History  Makefile.in  README
doc/src/: About.html.in  Article.html.in  Bugs.html.in  Build.html.in  Commands.html.in  Copyright.html.in  Error.html.in  Examples.html.in  Feedback.html.in  HOWTO.html.in  History.html.in  InsFiles.html.in  KDOC.html.in  Mutex.html.in  Notifier.html.in  Playable.html.in  Porting.html.in  Psalm150.html.in  Song.html.in  Structure.html.in  TSE3MDL.html.in  Trax.html.in  Trouble.html.in  Version.html.in  Whitepaper.html.in  htmlize.pl  index.html.in  pete.jpeg.verbatim.in  trax.gif.verbatim.in  tse3.gif.verbatim.in  tse3logo.png.verbatim.in
src/: CMakeLists.txt  Makefile.in
src/examples/: CMakeLists.txt  Makefile.in
src/examples/contents/: CMakeLists.txt  Makefile.in
src/examples/midifile/: CMakeLists.txt  Makefile.in  midifile.cpp
src/examples/ports/: CMakeLists.txt  Makefile.in  ports.cpp
src/examples/recording/: CMakeLists.txt  Makefile.in  recording.cpp
src/examples/scale/: CMakeLists.txt  Makefile.in
src/tse3/: CMakeLists.txt  FileBlockParser.cpp  FileBlockParser.h  Filter.h  Makefile.am  Makefile.in  Midi.cpp  Midi.h  MidiFile.cpp  MidiFile.h  MidiFilter.cpp  MidiFilter.h  MidiScheduler.cpp  MidiScheduler.h  Mixer.cpp  Mixer.h  Notifier.h  Part.h  Phrase.h  PhraseEdit.cpp  Serializable.h  Song.cpp  Song.h  TSE2MDL.cpp  TextTrack.cpp  TextTrack.h  Track.h  Transport.cpp  Transport.h  tse3.3
src/tse3/app/: Makefile.in  TrackSelection.h
src/tse3/cmd/: Makefile.in  Phrase.h
src/tse3/file/: Makefile.in  Song.cpp  Track.cpp  XML.cpp  XML.h
src/tse3/ins/: Instrument.cpp  Makefile.in
src/tse3/listen/: Makefile.in  TextTrack.h  Transport.h
src/tse3/listen/app/: Makefile.in
src/tse3/listen/cmd/: Makefile.in
src/tse3/listen/ins/: Makefile.in
src/tse3/plt/: Alsa-0.9.cpp  Factory_Win32.cpp  Makefile.in  OSS.cpp  Win32.cpp  Win32.h
src/tse3/util/: Makefile.in  MidiScheduler.cpp  MidiScheduler.h  XCMakeLists.txt
src/tse3play/: CMakeLists.txt  Makefile.in  tse3play.1  tse3play.cpp  tse3play.h
